namespace View
{
    public interface IView
    {
        void Run(); // Point d'entrée du programme d'affichage
    }
}