using BackUp.View;

namespace BackUp.View
{
    public class ManageBackUpView : IView
    {
        public void Run()
        {
            // Print all jobs name:
            //      Create a job
            //      Modify a job
            //      Delete a job
            //      View details job
            //          Modify job
            //          Delete job
            //          exit
            //      exit
        }
    }
}